// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders CheckboxGroup correctly with defaultValue 1`] = `
<div
  class="za-checkbox-group"
>
  <label>
    <span
      class="za-checkbox is-checked is-disabled"
    >
      <input
        checked=""
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="a"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    A
  </label>
  <label>
    <span
      class="za-checkbox is-disabled"
    >
      <input
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="b"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    B
  </label>
  <label>
    <span
      class="za-checkbox is-disabled"
    >
      <input
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="c"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    C
  </label>
  <label>
    <span
      class="za-checkbox is-disabled"
    >
      <input
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="d"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    D
  </label>
</div>
`;

exports[`Checkbox renders disabled Checkbox correctly 1`] = `
<label>
  <span
    class="za-checkbox is-checked is-disabled"
  >
    <input
      checked=""
      class="za-checkbox__input"
      disabled=""
      type="checkbox"
      value="0"
    />
    <span
      class="za-checkbox__inner"
    />
  </span>
  选择0
</label>
`;

exports[`Checkbox renders disabled CheckboxGroup correctly 1`] = `
<div
  class="za-checkbox-group"
>
  <label>
    <span
      class="za-checkbox is-disabled"
    >
      <input
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="a"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    A
  </label>
  <label>
    <span
      class="za-checkbox is-disabled"
    >
      <input
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="b"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    B
  </label>
  <label>
    <span
      class="za-checkbox is-disabled"
    >
      <input
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="c"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    C
  </label>
  <label>
    <span
      class="za-checkbox is-disabled"
    >
      <input
        class="za-checkbox__input"
        disabled=""
        type="checkbox"
        value="d"
      />
      <span
        class="za-checkbox__inner"
      />
    </span>
    D
  </label>
</div>
`;

exports[`Checkbox renders indeterminate Checkbox correctly 1`] = `
<label>
  <span
    class="za-checkbox"
  >
    <input
      class="za-checkbox__input"
      type="checkbox"
      value="0"
    />
    <span
      class="za-checkbox__inner"
    />
  </span>
  选择0
</label>
`;

exports[`Checkbox renders normal Checkbox correctly 1`] = `
<label>
  <span
    class="za-checkbox is-checked"
  >
    <input
      checked=""
      class="za-checkbox__input"
      type="checkbox"
      value="0"
    />
    <span
      class="za-checkbox__inner"
    />
  </span>
  选择0
</label>
`;
